# metodos-numericos-cpp

./: CMakeLists.txt  README.md
01_raices/: metodo_biseccion.cpp  metodo_newton_raphson.cpp  metodo_regla_falsa.cpp
02_sistemas_lineales/: matriz_inversa_gauss_jordan.cpp  metodo_gauss_seidel.cpp
03_interpolacion/: interpolacion_lagrange.cpp
04_series/: serie_maclaurin_exponencial.cpp
05_integracion/: integracion_rectangulos.cpp  integracion_trapecio_compuesto.cpp
